# FloatingCompressionSurvey

./: CMakeLists.txt  README.md
test/: CMakeLists.txt  Perf.cc
test/baselines/alp/test/: CMakeLists.txt
test/baselines/buff/: CMakeLists.txt  buff_compressor.cc  buff_compressor.h  buff_decompressor.cc  buff_decompressor.h  output_bit_stream.cc  sparse_result.cc  sparse_result.h
test/baselines/chimp128/: CMakeLists.txt  chimp_compressor.cc  chimp_compressor.h  chimp_compressor_32.cc  chimp_compressor_32.h  chimp_decompressor.cc  chimp_decompressor.h  chimp_decompressor_32.cc  chimp_decompressor_32.h  double.h  float.h  input_bit_stream.cc  input_bit_stream.h
test/baselines/deflate/: CMakeLists.txt  array.h  compress.c  compress.h  deflate_compressor.cc  deflate_compressor.h  deflate_decompressor.cc  deflate_decompressor.h  input_bit_stream.h  output_bit_stream.h  uncompr.h
test/baselines/elf/: CMakeLists.txt  ElfCompressor.cpp  ElfCompressor32.cpp  ElfDecompressor.cpp  ElfDecompressor32.cpp  defs.h  elf.h  utils.cc
test/baselines/elf/BitStream/: BitDefine.h  BitReader.h  BitWriter.h
test/baselines/fpc/: CMakeLists.txt  array.h  fpc_compressor.cc  fpc_compressor.h  fpc_decompressor.cc  fpc_decompressor.h  output_bit_stream.h
test/baselines/gorilla/: CMakeLists.txt  gorilla_compressor.cc  gorilla_compressor.h  gorilla_decompressor.cc  gorilla_decompressor.h
test/baselines/lz4/: CMakeLists.txt  frameCompress.c  frameCompress.h  lz4_compressor.cc  lz4_compressor.h  lz4_decompressor.cc  lz4_decompressor.h
test/baselines/lz77/: CMakeLists.txt
test/baselines/machete/: CMakeLists.txt  defs.h  huffman.cpp  hybrid.cpp  mach_errors.h  machete.cpp  machete.h  ovlq.cpp  predict.cpp
test/baselines/machete/BitStream/: BitReader.h  BitWriter.h
test/baselines/sim_piece/: CMakeLists.txt  float_encoder.cc  float_encoder.h  int_encoder.cc  int_encoder.h  point.h  sim_piece.cc  sim_piece.h  sim_piece_segment.h  u_int_encoder.cc  u_int_encoder.h  variable_byte_encoder.cc  variable_byte_encoder.h
test/baselines/snappy/: CMakeLists.txt
test/baselines/sz2/sz/: CMakeLists.txt
test/baselines/sz2/sz/src/: sz_float.c
test/data_set/: dataset_row_counts.csv
test/data_set/formatted/: Air-pressure.csv  Air-sensor.csv  Basel-temp.csv  Basel-wind.csv  Bird-migration.csv  Bitcoin-price.csv  City-temp.csv  Dew-point-temp.csv  IR-bio-temp.csv  PM10-dust.csv  Stocks-DE.csv  Stocks-UK.csv  Stocks-USA.csv  Wind-Speed.csv  dataset_row_counts.csv
